--- a/european_migrant_crisis.html
+++ b/european_migrant_crisis.html
@@ -50,7 +50,6 @@
 <!-- explanation2 page -->
   <section id="explanation3">
     <p>France, Germany and the UK have the largest Muslim populations in Europe, but Syrian refugees only make up about one percent of them.</p>
-    <!-- insert highchart here -->
 
     <p>The apprehension Europeans feel toward refugees today is fueled in part by their unfavorable views of Muslims already living in Europe. To understand the current crisis, it’s essential to look back at previous waves of migration to the region.</p>
 
@@ -106,39 +105,35 @@
       <!-- insert button here -->
     </article> <!-- close fr_economy article -->
 
-  <!--   <article id="fr_conditions">
-      <p>Unemployment is biggest obstacle to integration for immigrants. According to <a href= "https://www.migrationpolicy.org/article/challenge-french-diversity">Brookings</a>, the unemployment rate among immigrants in France is usually twice as high as the national rate of unemployment.
-      </p>
-
-      insert button here
-    </article> close fr_conditions article -->
-
   </section>  <!-- close france section -->
 
 <!-- begin germany section -->
   <section id="germany">
 
     <article id="ger_migration_waves">
-      <p></p>
+      <p>Germany and France have similar immigration history. During the first half of the 20th century, Germany received foreign workers from neighboring countries including Poland, Czechoslovakia and Hungary to fill the unskilled labor gaps in the mining and manufacturing sectors.
+      </p>
+
+      <p>
+      In the late 1950s, post-war labor shortages prompted the country to sign bilateral recruitment agreements with Italy, Spain and Greece as well as multiple Muslim nations including Turkey, Morocco and Tunisia.
+      </p>
+
+      <p><a href= "">See image</a>
+      </p>
+
       <!-- insert button here -->
     </article> <!-- close ger_migration_waves article -->
 
     <article id="ger_economy">
-      <p></p>
+      <p>Much like in France, recruitment of foreign guest workers continued until the 1973 oil crisis that plunged the country into a recession. By that time, Turkey had surpassed Italy as the most prominent source of immigration. According to the <a href= "https://www.migrationpolicy.org/article/germany-immigration-transition">Migration Policy Institute</a>, Turkish people accounted for 23 percent of foreigners in the country.</p>
+
+      <p>Guest workers expected to enter Germany, work for a few years and then return to their former homes. However, economic and political unrest in Turkey prompted a large portion of them to settle in the Germany, eventually bringing over their families as well. 
+      </p>
+
+      <a href= "">See image</a>
+      </p>
       <!-- insert button here -->
     </article> <!-- close ger_economy article -->
-
-    <article id="ger_laws">
-      <p></p>
-      <!-- insert button here -->
-    </article> <!-- close ger_laws article -->
-
-    <article id="ger_conditions">
-      <p></p>
-      <!-- insert button here -->
-    </article> <!-- close ger_conditions article -->
-
-  </section>  <!-- close germany section -->
 
 <!-- begin uk section -->
   <section id="uk">
@@ -165,5 +160,11 @@
 
   </section>  <!-- close uk section -->
 
+  <!--   <article id="fr_conditions">
+      <p>Unemployment is biggest obstacle to integration for immigrants. According to <a href= "https://www.migrationpolicy.org/article/challenge-french-diversity">Brookings</a>, the unemployment rate among immigrants in France is usually twice as high as the national rate of unemployment.
+      </p>
+
+      insert button here
+    </article> close fr_conditions article -->
 </body>
 </htlm>
