--- a/european_migrant_crisis.html
+++ b/european_migrant_crisis.html
@@ -124,16 +124,16 @@
       <!-- insert button here -->
     </article> <!-- close ger_migration_waves article -->
 
-    <article id="ger_economy">
+    <article id="ger_guest">
       <p>Much like in France, recruitment of foreign guest workers continued until the 1973 oil crisis that plunged the country into a recession. By that time, Turkey had surpassed Italy as the most prominent source of immigration. According to the <a href= "https://www.migrationpolicy.org/article/germany-immigration-transition">Migration Policy Institute</a>, Turkish people accounted for 23 percent of foreigners in the country.</p>
 
-      <p>Guest workers expected to enter Germany, work for a few years and then return to their former homes. However, economic and political unrest in Turkey prompted a large portion of them to settle in the Germany, eventually bringing over their families as well. 
+      <p>Guest workers expected to enter Germany, work for a few years and then return to their former homes. However, economic and political unrest in Turkey prompted a large portion of them to settle in the Germany, eventually bringing over their families as well.
       </p>
 
       <a href= "">See image</a>
       </p>
       <!-- insert button here -->
-    </article> <!-- close ger_economy article -->
+    </article> <!-- close ger_guest article -->
 
 <!-- begin uk section -->
   <section id="uk">
@@ -147,16 +147,6 @@
       <p></p>
       <!-- insert button here -->
     </article> <!-- close uk_economy article -->
-
-    <article id="uk_laws">
-      <p></p>
-      <!-- insert button here -->
-    </article> <!-- close uk_laws article -->
-
-    <article id="uk_conditions">
-      <p></p>
-      <!-- insert button here -->
-    </article> <!-- close uk_conditions article -->
 
   </section>  <!-- close uk section -->
 
