--- a/european_migrant_crisis.html
+++ b/european_migrant_crisis.html
@@ -67,7 +67,7 @@
       <p>During the industrial revolution and after World War I, the demand for labor in France was high. Consequently, migration was encouraged. Those who migrated to France between 1850 and 1945 originated mostly from neighboring countries, such as Italy, Switzerland and Poland.
       </p>
 
-      <p>After World War II, the source of immigration shifted from European countries to North African countries, particularly Algeria. According to <a href= "https://www.cia.gov/library/publications/the-world-factbook/geos/ag.html">The World Factbook</a>, 99 percent of Algerians identify as Arab Muslims. Unlike the previous waves of migration, which consisted of white Roman Catholics who had to make minor changes to assimilate to French life, Algerians brought over different lifestyles and traditions that made assimilating a harder task.
+      <p>After World War II, the source of immigration shifted from European countries to North African countries, particularly Algeria. According to <a href= "https://www.cia.gov/library/publications/the-world-factbook/geos/ag.html">The World Factbook</a>, 99 percent of Algerians identify as Arab Muslims. Unlike the previous waves of migration, which consisted of white Roman Catholics who had to make minor changes to assimilate to French life, Algerians have different socio-cultural characteristics that made assimilating a harder task.
       </p>
       <!-- insert highchart here -->
 
@@ -115,7 +115,7 @@
       </p>
 
       <p>
-      In the late 1950s, post-war labor shortages prompted the country to sign bilateral recruitment agreements with Italy, Spain and Greece as well as multiple Muslim nations including Turkey, Morocco and Tunisia.
+      In the late 1950s, post-war labor shortages prompted the country to sign bilateral recruitment agreements to import foreign labor from Italy, Spain and Greece as well as multiple Muslim nations including Turkey, Morocco and Tunisia.
       </p>
 
       <p><a href= "">See image</a>
@@ -127,10 +127,13 @@
     <article id="ger_guest">
       <p>Much like in France, recruitment of foreign guest workers continued until the 1973 oil crisis that plunged the country into a recession. By that time, Turkey had surpassed Italy as the most prominent source of immigration. According to the <a href= "https://www.migrationpolicy.org/article/germany-immigration-transition">Migration Policy Institute</a>, Turkish people accounted for 23 percent of foreigners in the country.</p>
 
-      <p>Guest workers expected to enter Germany, work for a few years and then return to their former homes. However, economic and political unrest in Turkey prompted a large portion of them to settle in the Germany, eventually bringing over their families as well.
+      <p>Guest workers were expected to enter Germany, work for a few years and then return to their former homes. However, economic and political unrest in Turkey prompted a large portion of them to settle in the Germany.
       </p>
 
-      <a href= "">See image</a>
+      <p>The unexpected settlement of Turkish immigrants and the period of family reunification that ensued shortly after gave way to xenophobic rhetoric and debates about the country's national identity.
+      </p>
+
+      <p><a href= "">See image</a>
       </p>
       <!-- insert button here -->
     </article> <!-- close ger_guest article -->
