--- a/european_migrant_crisis.html
+++ b/european_migrant_crisis.html
@@ -49,11 +49,11 @@
 
 <!-- explanation2 page -->
   <section id="explanation3">
-    <p>France, Germany and the UK have the largest Muslim populations in Europe, but Syrian refugees only make up about one percent of them.</p>
+    <p>France and Germany have the largest Muslim populations in Europe, but Syrian refugees only make up about one percent in each country.</p>
 
     <p>The apprehension Europeans feel toward refugees today is fueled in part by their unfavorable views of Muslims already living in Europe. To understand the current crisis, it’s essential to look back at previous waves of migration to the region.</p>
 
-    <p>Let’s take a closer look at the influx and treatment of immigrants in France, Germany and the UK prior to the current crisis.</p>
+    <p>Let’s take a closer look at the influx and treatment of immigrants in France and Germany prior to the current crisis.</p>
 
     <p><a href= "https://commons.wikimedia.org/wiki/File:SIAD_Demo_Aalborg.JPG">See image</a>
     </p>
@@ -138,26 +138,40 @@
       <!-- insert button here -->
     </article> <!-- close ger_guest article -->
 
-<!-- begin uk section -->
-  <section id="uk">
+<!-- begin conditions section -->
+  <section id="consequences">
 
-    <article id="uk_migration_waves">
-      <p></p>
+    <article id="unemployment">
+
+      <p>Unemployment is an immigrant's biggest obstacle to integration.
+      </p>
+
+      <p>
+      According to <a href= "https://www.migrationpolicy.org/article/challenge-french-diversity">Brookings</a>, the unemployment rate among immigrants in France is usually twice as high as the national rate of unemployment. In 2016, the <a href= "https://data.oecd.org/migration/foreign-born-unemployment.htm#indicator-chart">Organisation for Economic Co-operation and Development</a> reported that the national unemployment rate in Germany was 3.6 while foreign-born unemployment reached 6.8 percent.
+      </p>
+
+      <p><a href= "">See image</a>
+      </p>
       <!-- insert button here -->
     </article> <!-- close uk_migration_waves article -->
 
-    <article id="uk_economy">
-      <p></p>
-      <!-- insert button here -->
-    </article> <!-- close uk_economy article -->
-
-  </section>  <!-- close uk section -->
-
-  <!--   <article id="fr_conditions">
-      <p>Unemployment is biggest obstacle to integration for immigrants. According to <a href= "https://www.migrationpolicy.org/article/challenge-french-diversity">Brookings</a>, the unemployment rate among immigrants in France is usually twice as high as the national rate of unemployment.
+    <article id="far_right">
+      <p>Political parties in the far right have gained significant popularity in both France and Germany.
       </p>
 
-      insert button here
-    </article> close fr_conditions article -->
+      <p>Marine le Pen, the leader of the National Front, came in second place during the 2017 French presidential election.
+      </p>
+
+      <p>Germany’s nationalist party, Alternative for Germany, became the third largest party in the federal parliament in 2017.
+      </p>
+
+      <p><a href= "">See image</a>
+      </p>
+      <!-- insert button here -->
+    </article> <!-- close far_right article -->
+
+  </section>  <!-- close consequences section -->
+
+
 </body>
 </htlm>
