--- a/european_migrant_crisis.html
+++ b/european_migrant_crisis.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>European Migrant Crisis</title>
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <h1>European Migrant Crisis</h1>
     <p> A visual story by Eugenia Blaubach</p>
 
-    <p><a href= "">See image</a>
+    <p><a href= "https://commons.wikimedia.org/wiki/File:Syrian_refugees_strike_in_front_of_Budapest_Keleti_railway_station._Refugee_crisis._Budapest,_Hungary,_Central_Europe,_4_September_2015.jpg">See image</a>
     </p>
 
     <!-- insert button here -->
@@ -69,7 +70,9 @@
 
       <p>After World War II, the source of immigration shifted from European countries to North African countries, particularly Algeria. According to <a href= "https://www.cia.gov/library/publications/the-world-factbook/geos/ag.html">The World Factbook</a>, 99 percent of Algerians identify as Arab Muslims. Unlike the previous waves of migration, which consisted of white Roman Catholics who had to make minor changes to assimilate to French life, Algerians have different socio-cultural characteristics that made assimilating a harder task.
       </p>
-      <!-- insert highchart here -->
+
+
+      <div id="waves"></div>
 
       <!-- insert button here -->
     </article> <!-- close fr_migration_waves article -->
@@ -171,6 +174,7 @@
     </article> <!-- close far_right article -->
 
   </section>  <!-- close consequences section -->
+
 
 
 </body>
