--- a/european_migrant_crisis.html
+++ b/european_migrant_crisis.html
@@ -4,23 +4,32 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>European Migrant Crisis</title>
+  <link rel="stylesheet" href="styles/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
 
 <!-- intro page -->
-  <section id="intro">
-    <p>IDENTITY</p>
-    <p>Closer Look</p>
-    <h1>European Migrant Crisis</h1>
-    <p> A visual story by Eugenia Blaubach</p>
-
-    <p><a href= "https://commons.wikimedia.org/wiki/File:Syrian_refugees_strike_in_front_of_Budapest_Keleti_railway_station._Refugee_crisis._Budapest,_Hungary,_Central_Europe,_4_September_2015.jpg">See image</a>
-    </p>
-
-    <!-- insert button here -->
-  </section>  <!-- close intro section  -->
+  <div id="intro">
+    <div class="overlay">
+      <div class="container">
+        <div class="row">
+           <div class="col-lg-12">
+             <div class="text-center center-block">
+                <p>IDENTITY</p>
+                <p>Closer Look</p>
+                <h1>European Migrant Crisis</h1>
+                <p> A visual story by Eugenia Blaubach</p>
+                <p><a href= "https://commons.wikimedia.org/wiki/File:Women_and_children_among_Syrian_refugees_striking_at_the_platform_of_Budapest_Keleti_railway_station._Refugee_crisis._Budapest,_Hungary,_Central_Europe,_4_September_2015._(3).jpg">See image</a>
+                </p>
+            </div> <!-- close text-center  -->
+          </div> <!-- close col  -->
+        </div> <!-- close row  -->
+      </div> <!-- close container  -->
+    </div> <!-- close overlay  -->
+  <!-- insert button here -->
+  </div>  <!-- close intro section  -->
 
 <!-- explanation1 page -->
   <section id="explanation1">
