--- a/european_migrant_crisis.html
+++ b/european_migrant_crisis.html
@@ -21,6 +21,8 @@
                 <p>Closer Look</p>
                 <h1>European Migrant Crisis</h1>
                 <p> A visual story by Eugenia Blaubach</p>
+                <button  type="button" class="btn btn-default">Begin</button>
+                <a href="#explanation1">Next</a>
                 <p><a href= "https://commons.wikimedia.org/wiki/File:Women_and_children_among_Syrian_refugees_striking_at_the_platform_of_Budapest_Keleti_railway_station._Refugee_crisis._Budapest,_Hungary,_Central_Europe,_4_September_2015._(3).jpg">See image</a>
                 </p>
             </div> <!-- close text-center  -->
@@ -32,17 +34,27 @@
   </div>  <!-- close intro section  -->
 
 <!-- explanation1 page -->
-  <section id="explanation1">
-    <p>For some, Europe’s migrant crisis evokes images like this one: an overcrowded boat carrying Syrian and Iraqi refugees across the Mediterranean Sea.
-    </p>
+  <div id="explanation1">
+    <div class="overlay">
+      <div class="container">
+        <div class="row">
+           <div class="col-lg-4">
+             <div id="text-explanation1">
+              <p>For some, Europe’s migrant crisis evokes images like this one: an overcrowded boat carrying Syrian and Iraqi refugees across the Mediterranean Sea.
+              </p>
 
-    <p>For others, it conjures up memories of Europe’s recent terrorist attacks, heightens concerns about national security and sparks political debate over the level of access migrants should be granted to the region.
-    </p>
+              <p>For others, it conjures up memories of Europe’s recent terrorist attacks, heightens concerns about national security and sparks political debate over the level of access migrants should be granted to the region.
+              </p>
 
-    <p><a href= "https://commons.wikimedia.org/wiki/File:20151030_Syrians_and_Iraq_refugees_arrive_at_Skala_Sykamias_Lesvos_Greece_2.jpg">See image</a>
-    </p>
-    <!-- insert button here -->
-  </section>  <!-- close explanation1 section  -->
+              <p><a href= "https://commons.wikimedia.org/wiki/File:20151030_Syrians_and_Iraq_refugees_arrive_at_Skala_Sykamias_Lesvos_Greece_2.jpg">See image</a>
+              </p>
+            </div> <!-- close text-explanation1  -->
+          </div> <!-- close col  -->
+        </div> <!-- close row  -->
+      </div> <!-- close container  -->
+    </div> <!-- close overlay  -->
+  <!-- insert button here -->
+  </div>  <!-- close explanation1 section  -->
 
 <!-- explanation2 page -->
   <section id="explanation2">
