--- a/european_migrant_crisis.html
+++ b/european_migrant_crisis.html
@@ -21,8 +21,8 @@
                 <p>Closer Look</p>
                 <h1>European Migrant Crisis</h1>
                 <p> A visual story by Eugenia Blaubach</p>
-                <button  type="button" class="btn btn-default">Begin</button>
-                <a href="#explanation1">Next</a>
+                <p><button  type="button" class="btn btn-default">Begin</button></p>
+                <p><a href="#explanation1">Begin</a></p>
                 <p><a href= "https://commons.wikimedia.org/wiki/File:Women_and_children_among_Syrian_refugees_striking_at_the_platform_of_Budapest_Keleti_railway_station._Refugee_crisis._Budapest,_Hungary,_Central_Europe,_4_September_2015._(3).jpg">See image</a>
                 </p>
             </div> <!-- close text-center  -->
