--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- intro page -->
-  <div id="intro">
+  <div class="image" id="intro">
     <div class="overlay">
       <div class="container">
         <div class="row">
@@ -21,8 +21,7 @@
                 <p>Closer Look</p>
                 <h1>European Migrant Crisis</h1>
                 <p> A visual story by Eugenia Blaubach</p>
-                <p><button  type="button" class="btn btn-default">Begin</button></p>
-                <p><a href="#explanation1">Begin</a></p>
+                <a href="#explanation1" class="btn btn_round_outline">Begin</a>
                 <p><a href= "https://commons.wikimedia.org/wiki/File:Women_and_children_among_Syrian_refugees_striking_at_the_platform_of_Budapest_Keleti_railway_station._Refugee_crisis._Budapest,_Hungary,_Central_Europe,_4_September_2015._(3).jpg">See image</a>
                 </p>
             </div> <!-- close text-center  -->
@@ -34,12 +33,14 @@
   </div>  <!-- close intro section  -->
 
 <!-- explanation1 page -->
-  <div id="explanation1">
+  <div class="image" id="explanation1">
     <div class="overlay">
+      <a href="#intro" class="btn btn_round_outline back float-left back"><</a>
+      <a href="#explanation2" class="btn btn_round_outline float-right next">></a>
       <div class="container">
         <div class="row">
            <div class="col-lg-4">
-             <div id="text-explanation1">
+             <div class="text" id="text-explanation1">
               <p>For some, Europe’s migrant crisis evokes images like this one: an overcrowded boat carrying Syrian and Iraqi refugees across the Mediterranean Sea.
               </p>
 
