--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
 <!-- explanation1 page -->
   <div class="image" id="explanation1">
     <div class="overlay">
+      <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
       <a href="#intro" class="btn btn_round_outline back float-left back"><</a>
       <a href="#explanation2" class="btn btn_round_outline float-right next">></a>
       <div class="container">
         <div class="row">
-           <div class="col-lg-4">
-             <div class="text" id="text-explanation1">
+           <div class="col-sm-12 col-md-9 col-lg-5">
+             <div class="text textbox">
               <p>For some, Europe’s migrant crisis evokes images like this one: an overcrowded boat carrying Syrian and Iraqi refugees across the Mediterranean Sea.
               </p>
 
@@ -58,20 +59,63 @@
   </div>  <!-- close explanation1 section  -->
 
 <!-- explanation2 page -->
-  <section id="explanation2">
-    <p>The UNHCR estimates that 362,000 refugees and migrants crossed the Mediterranean Sea in 2016. A large majority of those individuals were fleeing war-torn countries like Syria, Iraq and Afghanistan where Islam is the dominant religion.
-    </p>
+  <div class="image" id="explanation2">
+    <div class="overlay">
+      <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+      <a href="#explanation1" class="btn btn_round_outline back float-left back"><</a>
+      <a href="#explanation3" class="btn btn_round_outline float-right next">></a>
+      <div class="container">
+        <div class="row">
+           <div class="col-sm-12 col-md-9 col-lg-5">
+             <div class="text textbox">
+               <p>The UNHCR estimates that 362,000 refugees and migrants crossed the Mediterranean Sea in 2016.
+               </p>
 
-    <p>The influx of migrants has been met by a surge of nationalism and anti-Muslim sentiments throughout Europe. According to a <a href= "http://www.pewglobal.org/2016/07/11/europeans-fear-wave-of-refugees-will-mean-more-terrorism-fewer-jobs/">2016 Pew Research Center study</a>, negative opinions about Muslims have increased in Greece, Spain, Italy, France and the UK since 2015. Many Europeans believe incoming refugees increase the possibility of future terrorist attacks, and more than half of the countries surveyed also said refugees would take away jobs and social benefits.
-    </p>
+               <p>
+               A large majority of those individuals were fleeing war-torn countries like Syria, Iraq and Afghanistan where Islam is the dominant religion.
+               </p>
 
-    <p><a href= "https://commons.wikimedia.org/wiki/File:A_line_of_Syrian_refugees_crossing_the_border_of_Hungary_and_Austria_on_their_way_to_Germany._Hungary,_Central_Europe,_6_September_2015.jpg">See image</a>
-    </p>
-    <!-- insert button here -->
-  </section>  <!-- close explanation2 section  -->
+               <p><a href= "https://commons.wikimedia.org/wiki/File:A_line_of_Syrian_refugees_crossing_the_border_of_Hungary_and_Austria_on_their_way_to_Germany._Hungary,_Central_Europe,_6_September_2015.jpg">See image</a>
+               </p>
 
-<!-- explanation2 page -->
-  <section id="explanation3">
+             </div> <!-- close text-explanation1  -->
+           </div> <!-- close col  -->
+         </div> <!-- close row  -->
+       </div> <!-- close container  -->
+     </div> <!-- close overlay  -->
+ </div>  <!-- close explanation2   -->
+
+<!-- explanation3 page -->
+ <div class="image" id="explanation3">
+   <div class="overlay">
+     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+     <a href="#explanation2" class="btn btn_round_outline back float-left back"><</a>
+     <a href="#explanation4" class="btn btn_round_outline float-right next">></a>
+     <div class="container">
+       <div class="row">
+          <div class="col-sm-12 col-md-9 col-lg-5">
+            <div class="text textbox">
+              <p>The influx of migrants has been met by a surge of nationalism and anti-Muslim sentiments throughout Europe.
+              </p>
+
+              <p>According to a <a href= "http://www.pewglobal.org/2016/07/11/europeans-fear-wave-of-refugees-will-mean-more-terrorism-fewer-jobs/">2016 Pew Research Center study</a>, negative opinions about Muslims have increased in Greece, Spain, Italy, France and the UK since 2015.
+              </p>
+
+              <p>Many Europeans believe incoming refugees increase the possibility of future terrorist attacks, and more than half of the countries surveyed also said refugees would take away jobs and social benefits.
+              </p>
+
+              <p><a href= "https://commons.wikimedia.org/wiki/File:A_line_of_Syrian_refugees_crossing_the_border_of_Hungary_and_Austria_on_their_way_to_Germany._Hungary,_Central_Europe,_6_September_2015.jpg">See image</a>
+              </p>
+
+            </div> <!-- close text-explanation1  -->
+          </div> <!-- close col  -->
+        </div> <!-- close row  -->
+      </div> <!-- close container  -->
+    </div> <!-- close overlay  -->
+</div>  <!-- close explanation3   -->
+
+<!-- explanation4 page -->
+  <section id="explanation4">
     <p>France and Germany have the largest Muslim populations in Europe, but Syrian refugees only make up about one percent in each country.</p>
 
     <p>The apprehension Europeans feel toward refugees today is fueled in part by their unfavorable views of Muslims already living in Europe. To understand the current crisis, it’s essential to look back at previous waves of migration to the region.</p>
