--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <!-- intro page -->
   <div class="image" id="intro">
-    <div class="overlay">
+    <div class="overlay ">
       <div class="container">
         <div class="row">
            <div class="col-lg-12">
-             <div class="text-center center-block">
+             <div class="text-center center-block animated fadeIn">
                 <p>IDENTITY</p>
                 <p>Closer Look</p>
                 <h1>European Migrant Crisis</h1>
@@ -24,7 +24,7 @@
                 <a href="#explanation1" class="btn btn_round_outline">Begin</a>
                 <p><a href= "https://commons.wikimedia.org/wiki/File:Women_and_children_among_Syrian_refugees_striking_at_the_platform_of_Budapest_Keleti_railway_station._Refugee_crisis._Budapest,_Hungary,_Central_Europe,_4_September_2015._(3).jpg">See image</a>
                 </p>
-            </div> <!-- close text-center  -->
+            </div> <!-- close text  -->
           </div> <!-- close col  -->
         </div> <!-- close row  -->
       </div> <!-- close container  -->
@@ -33,7 +33,7 @@
   </div>  <!-- close intro section  -->
 
 <!-- explanation1 page -->
-  <div class="image" id="explanation1">
+  <div class="image " id="explanation1">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
       <a href="#intro" class="btn btn_round_outline back float-left back"><</a>
@@ -41,7 +41,7 @@
       <div class="container">
         <div class="row">
            <div class="col-sm-12 col-md-9 col-lg-5">
-             <div class="text textbox">
+             <div class="text textbox ">
               <p>For some, Europe’s migrant crisis evokes images like this one: an overcrowded boat carrying Syrian and Iraqi refugees across the Mediterranean Sea.
               </p>
 
@@ -50,7 +50,7 @@
 
               <p><a href= "https://commons.wikimedia.org/wiki/File:20151030_Syrians_and_Iraq_refugees_arrive_at_Skala_Sykamias_Lesvos_Greece_2.jpg">See image</a>
               </p>
-            </div> <!-- close text-explanation1  -->
+            </div> <!-- close text  -->
           </div> <!-- close col  -->
         </div> <!-- close row  -->
       </div> <!-- close container  -->
@@ -78,7 +78,7 @@
                <p><a href= "https://commons.wikimedia.org/wiki/File:A_line_of_Syrian_refugees_crossing_the_border_of_Hungary_and_Austria_on_their_way_to_Germany._Hungary,_Central_Europe,_6_September_2015.jpg">See image</a>
                </p>
 
-             </div> <!-- close text-explanation1  -->
+             </div> <!-- close text  -->
            </div> <!-- close col  -->
          </div> <!-- close row  -->
        </div> <!-- close container  -->
@@ -107,7 +107,7 @@
               <p><a href= "https://commons.wikimedia.org/wiki/File:A_line_of_Syrian_refugees_crossing_the_border_of_Hungary_and_Austria_on_their_way_to_Germany._Hungary,_Central_Europe,_6_September_2015.jpg">See image</a>
               </p>
 
-            </div> <!-- close text-explanation1  -->
+            </div> <!-- close text  -->
           </div> <!-- close col  -->
         </div> <!-- close row  -->
       </div> <!-- close container  -->
@@ -115,46 +115,84 @@
 </div>  <!-- close explanation3   -->
 
 <!-- explanation4 page -->
-  <section id="explanation4">
-    <p>France and Germany have the largest Muslim populations in Europe, but Syrian refugees only make up about one percent in each country.</p>
+  <div class="image" id="explanation4">
+    <div class="overlay">
+      <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+      <a href="#explanation3" class="btn btn_round_outline back float-left back"><</a>
+      <a href="#fr_migration_waves" class="btn btn_round_outline float-right next">></a>
+      <div class="container">
+        <div class="row">
+           <div class="col-sm-12 col-md-9 col-lg-5">
+             <div class="text textbox">
+               <p>France and Germany have the largest Muslim populations in Europe, but Syrian refugees only make up about one percent in each country.</p>
 
-    <p>The apprehension Europeans feel toward refugees today is fueled in part by their unfavorable views of Muslims already living in Europe. To understand the current crisis, it’s essential to look back at previous waves of migration to the region.</p>
+               <p>The apprehension Europeans feel toward refugees today is fueled in part by their unfavorable views of Muslims already living in Europe. To understand the current crisis, it’s essential to look back at previous waves of migration to the region.</p>
 
-    <p>Let’s take a closer look at the influx and treatment of immigrants in France and Germany prior to the current crisis.</p>
+               <p>Let’s take a closer look at the influx and treatment of immigrants in France and Germany prior to the current crisis.</p>
 
-    <p><a href= "https://commons.wikimedia.org/wiki/File:SIAD_Demo_Aalborg.JPG">See image</a>
-    </p>
-    <!-- insert button here -->
-  </section>  <!-- close explanation3 section  -->
+               <p><a href= "https://commons.wikimedia.org/wiki/File:SIAD_Demo_Aalborg.JPG">See image</a>
+               </p>
+
+             </div> <!-- close text  -->
+           </div> <!-- close col  -->
+         </div> <!-- close row  -->
+       </div> <!-- close container  -->
+     </div> <!-- close overlay  -->
+  </div>  <!-- close explanation4 section  -->
 
 <!-- begin france section -->
-  <section id="france">
+<!-- fr_migration_waves -->
+    <div class="image" id="fr_migration_waves">
+      <div class="overlay">
+        <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+        <a href="#explanation4" class="btn btn_round_outline back float-left back"><</a>
+        <a href="#fr_algeria" class="btn btn_round_outline float-right next">></a>
+        <div class="container">
+          <div class="row">
+             <div class="col-sm-12 col-md-9 col-lg-5">
+               <div class="text textbox">
+                 <p>During the industrial revolution and after World War I, the demand for labor in France was high. Consequently, migration was encouraged. Those who migrated to France between 1850 and 1945 originated mostly from neighboring countries, such as Italy, Switzerland and Poland.
+                 </p>
 
-    <article id="fr_migration_waves">
-      <p>During the industrial revolution and after World War I, the demand for labor in France was high. Consequently, migration was encouraged. Those who migrated to France between 1850 and 1945 originated mostly from neighboring countries, such as Italy, Switzerland and Poland.
-      </p>
+                 <p>After World War II, the source of immigration shifted from European countries to North African countries, particularly Algeria. According to <a href= "https://www.cia.gov/library/publications/the-world-factbook/geos/ag.html">The World Factbook</a>, 99 percent of Algerians identify as Arab Muslims. Unlike the previous waves of migration, which consisted of white Roman Catholics who had to make minor changes to assimilate to French life, Algerians have different socio-cultural characteristics that made assimilating a harder task.
+                 </p>
+               </div> <!-- close text  -->
 
-      <p>After World War II, the source of immigration shifted from European countries to North African countries, particularly Algeria. According to <a href= "https://www.cia.gov/library/publications/the-world-factbook/geos/ag.html">The World Factbook</a>, 99 percent of Algerians identify as Arab Muslims. Unlike the previous waves of migration, which consisted of white Roman Catholics who had to make minor changes to assimilate to French life, Algerians have different socio-cultural characteristics that made assimilating a harder task.
-      </p>
+              <button type="button" class="btn btn_round_outline" data-toggle="modal" data-target="#exampleModal">Why Algeria?</button>
 
+             </div> <!-- close col  -->
+           </div> <!-- close row  -->
+         </div> <!-- close container  -->
+       </div> <!-- close overlay  -->
 
-      <div id="waves"></div>
+<!-- Modal -->
+       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+         <div class="modal-dialog" role="document">
+           <div class="modal-content">
+             <div class="modal-header">
+               <h5 class="modal-title" id="exampleModalLabel">France and Algeria</h5>
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                 <span aria-hidden="true">&times;</span>
+               </button>
+             </div>
+             <div class="modal-body">
+               <p>Algeria became French colony in 1830. After World War II, tensions with the colony heightened, giving rise to the Algerian nationalist movement. The Algerian War for Independence broke out in 1954 and Algeria gained independence in 1962.
+               </p>
 
-      <!-- insert button here -->
-    </article> <!-- close fr_migration_waves article -->
+               <p>This troubling period in history, marked by political turmoil and economic uncertainty, led thousands of Algerians to migrate to France. <a href= "https://www.migrationpolicy.org/article/challenge-french-diversity">The Migration Policy Institute</a> estimates that from 1968 to 1982, the Algerian immigrant population in France nearly doubled from around 470,000 to 800,000.</p>
 
-    <article id="fr_algeria">
-      <!-- this will be a popup for additional info -->
-      <p>Algeria became French colony in 1830. After World War II, tensions with the colony heightened, giving rise to the Algerian nationalist movement. The Algerian War for Independence broke out in 1954 and Algeria gained independence in 1962.
-      </p>
+               <p><a href= "https://commons.wikimedia.org/wiki/File:A-soldier-interviewing-men-in-Algeria-1962-352033971129.jpg">See image</a>
+               </p>
+             </div>
+             <div class="modal-footer">
+               <button type="button" class="btn btn_round_outline" data-dismiss="modal">Close</button>
+             </div>
+           </div>
+         </div>
+       </div>
 
-      <p>This troubling period in history marked by political turmoil and economic uncertainty led thousands of Algerians to migrate to France. <a href= "https://www.migrationpolicy.org/article/challenge-french-diversity">The Migration Policy Institute</a> estimates that from 1968 to 1982, the Algerian immigrant population in France nearly doubled from around 470,000 to 800,000.</p>
+    </div> <!-- close fr_migration_waves article -->
 
-      <p><a href= "https://commons.wikimedia.org/wiki/File:A-soldier-interviewing-men-in-Algeria-1962-352033971129.jpg">See image</a>
-      </p>
-
-      <!-- insert button here -->
-    </article> <!-- close fr_algeria article -->
 
     <article id="fr_economy">
       <p>France experienced a 30-year period of economic prosperity after World War II during which permanent migration to the country was encouraged.
@@ -241,7 +279,12 @@
 
   </section>  <!-- close consequences section -->
 
-
+  <!-- Scripts  -->
+      <script src="scripts/jquery-slim.min.js"></script>
+      <script src="scripts/popper.min.js"></script>
+      <script src="scripts/bootstrap.min.js"></script>
+      <script src="scripts/ie10-viewport-bug-workaround.js"></script>
+      <script src="scripts/main.js"></script>
 
 </body>
 </htlm>
